@@ -15,6 +15,8 @@
 
 @DOCSTRING(dbtype)
 
-@DOCSTRING(debug_on_error)
+@DOCSTRING(debug_on_interrupt)
 
 @DOCSTRING(debug_on_warning)
+
+@DOCSTRING(debug_on_error)
